--- a/website/pages/docs/concepts/style-props.mdx
+++ b/website/pages/docs/concepts/style-props.mdx
@@ -1,6 +1,6 @@
 ---
 title: Style props
-description: Style props lets you quickly build UI components in JSX by passing css properties as "props" to your components.
+description: Simplify JSX component creation by passing CSS properties as props.
 ---
 
 # Style props
