--- a/website/pages/docs/customization/utilities.mdx
+++ b/website/pages/docs/customization/utilities.mdx
@@ -1,6 +1,6 @@
 ---
 title: Utilities
-description: The utility API is a way to create your own CSS properties, map existing properties to a set of values or tokens.
+description: Define custom CSS properties or map existing ones to values or tokens.
 ---
 
 # Utilities
