--- a/website/pages/docs/utilities/list.mdx
+++ b/website/pages/docs/utilities/list.mdx
@@ -1,6 +1,6 @@
 ---
 title: List
-description: Panda provides utilities for customizing list styles.
+description: Customizing list styles.
 ---
 
 # List
