--- a/website/pages/docs/customization/patterns.mdx
+++ b/website/pages/docs/customization/patterns.mdx
@@ -1,6 +1,6 @@
 ---
 title: Customizing Patterns
-description: Panda provides the ability to customize the built-in patterns, as well as creating your own custom patterns. This is useful to create your own layout pattern abstractions that can be used in your application.
+description: Tailor built-in and craft custom patterns for layout abstractions.
 ---
 
 # Pattern Configuration
