Document strict patterns

--- a/website/pages/docs/customization/patterns.mdx
+++ b/website/pages/docs/customization/patterns.mdx
@@ -18,6 +18,7 @@ A pattern accepts the following parameters:
 - `jsxElement` - The actual JSX element that will be rendered (when `jsxFramework` is set). Defaults to `div`.
 - `blocklist` - The list of properties that are not allowed to be used in the pattern. Can be used to ensure strict
   typings when using the pattern.
+- `strict` - Whether to only generate types for the specified properties. This will disallow css properties.
 
 ## Creating a Pattern
 
