--- a/website/pages/docs/customization/patterns.mdx
+++ b/website/pages/docs/customization/patterns.mdx
@@ -100,7 +100,7 @@ const App = () => {
 
 ## Customizing Built-in Patterns
 
-You can extend the default patterns by using the `patterns.extend` property in the config.
+You can extend the [default patterns](/docs/concepts/patterns#predefined-patterns) by using the `patterns.extend` property in the config.
 
 
 ```ts filename="panda.config.ts"
