--- a/website/pages/docs/installation/astro.mdx
+++ b/website/pages/docs/installation/astro.mdx
@@ -18,25 +18,25 @@ Install panda and create your `panda.config.ts` file.
 <Tabs items={['pnpm', 'npm', 'yarn', 'bun']}>
   <Tab>
     ```bash
-    pnpm install -D @pandacss/dev @pandacss/astro
+    pnpm install -D @pandacss/dev
     pnpm panda init
     ```
   </Tab>
   <Tab>
     ```bash
-    npm install -D @pandacss/dev @pandacss/astro
+    npm install -D @pandacss/dev
     npx panda init
     ```
   </Tab>
   <Tab>
     ```bash
-    yarn add -D @pandacss/dev @pandacss/astro
+    yarn add -D @pandacss/dev
     yarn panda init
     ```
   </Tab>
   <Tab>
     ```bash
-    bun add -D @pandacss/dev @pandacss/astro
+    bun add -D @pandacss/dev
     bun panda init
     ```
   </Tab>
