--- a/website/pages/docs/customization/conditions.mdx
+++ b/website/pages/docs/customization/conditions.mdx
@@ -85,7 +85,7 @@ export default defineConfig({
 });
 ```
 
-Then you can run the following command to update the pattern JS code:
+Then you can run the following command to update the conditions JS code:
 
 <Tabs items={['pnpm', 'npm', 'yarn', 'bun']}>
   <Tab>
