--- a/website/pages/docs/customization/conditions.mdx
+++ b/website/pages/docs/customization/conditions.mdx
@@ -78,7 +78,7 @@ import { defineConfig } from '@pandacss/dev'
 export default defineConfig({
   conditions: {
     extend: {
-      // Extend the default `flex` pattern
+      // Extend the default `dark` condition
       dark: '.dark &, [data-theme="dark"] &',
     },
   },
