docs: patterns JSX tab + built-in conditions link + rm @pandacss/astro from get started (#1983)
* docs: add JSX tab for each patterns

* docs: add link to built-in conditions from custom page

* chore: remove mentions to @pandacss/astro in Astro get started

* docs: astro postcss array syntax

* Update website/pages/docs/customization/conditions.mdx

Co-authored-by: Abraham <anubra266@gmail.com>

* Update website/pages/docs/customization/conditions.mdx

Co-authored-by: Abraham <anubra266@gmail.com>

---------

Co-authored-by: Abraham <anubra266@gmail.com>

--- a/website/pages/docs/customization/conditions.mdx
+++ b/website/pages/docs/customization/conditions.mdx
@@ -66,3 +66,46 @@ function App() {
   );
 }
 ```
+
+## Customizing Built-in Conditions
+
+You can extend the [default conditions](/docs/concepts/conditional-styles#reference) by using the `conditions.extend` property in the config.
+
+
+```ts filename="panda.config.ts"
+import { defineConfig } from '@pandacss/dev'
+
+export default defineConfig({
+  conditions: {
+    extend: {
+      // Extend the default `dark` condition
+      dark: '.dark &, [data-theme="dark"] &',
+    },
+  },
+});
+```
+
+Then you can run the following command to update the conditions JS code:
+
+<Tabs items={['pnpm', 'npm', 'yarn', 'bun']}>
+  <Tab>
+    ```bash
+    pnpm panda codegen
+    ```
+  </Tab>
+  <Tab>
+    ```bash
+    npm panda codegen
+    ```
+  </Tab>
+  <Tab>
+    ```bash
+    yarn panda codegen
+    ```
+  </Tab>
+  <Tab>
+    ```bash
+    bun panda codegen
+    ```
+  </Tab>
+</Tabs>
