--- a/website/pages/docs/installation/astro.mdx
+++ b/website/pages/docs/installation/astro.mdx
@@ -18,26 +18,26 @@ Install panda and create your `panda.config.ts` file.
 <Tabs items={['pnpm', 'npm', 'yarn', 'bun']}>
   <Tab>
     ```bash
-    pnpm install -D @pandacss/dev @pandacss/astro
-    pnpm panda init
+    pnpm install -D @pandacss/dev
+    pnpm panda init --postcss
     ```
   </Tab>
   <Tab>
     ```bash
-    npm install -D @pandacss/dev @pandacss/astro
-    npx panda init
+    npm install -D @pandacss/dev
+    npx panda init --postcss
     ```
   </Tab>
   <Tab>
     ```bash
-    yarn add -D @pandacss/dev @pandacss/astro
-    yarn panda init
+    yarn add -D @pandacss/dev
+    yarn panda init --postcss
     ```
   </Tab>
   <Tab>
     ```bash
-    bun add -D @pandacss/dev @pandacss/astro
-    bun panda init
+    bun add -D @pandacss/dev
+    bun panda init --postcss
     ```
   </Tab>
 </Tabs>
@@ -85,6 +85,20 @@ Add this code to an `src/index.css` file imported in the root component of your 
 ```css filename="src/index.css"
 @layer reset, base, tokens, recipes, utilities;
 ```
+
+### Update the postcss config
+
+Astro requires a little change for the `postcss.config.[c]js`:
+
+```diff {3} filename="postcss.config.js"
+module.exports = {
+-  plugins: {
+-   '@pandacss/dev/postcss': {}
+-  }
++  plugins: [require('@pandacss/dev/postcss')()]
+}
+```
+
 
 ### Start your build process
 
