--- a/website/pages/docs/installation/remix.mdx
+++ b/website/pages/docs/installation/remix.mdx
@@ -179,7 +179,7 @@ import {
   ScrollRestoration,
 } from "@remix-run/react";
 
-import styles from './index.css'
+import styles from "./index.css"
 
 export const links: LinksFunction = () => [
   ...(cssBundleHref ? [{ rel: "stylesheet", href: cssBundleHref }] : []),
