feat: allow token references in media queries, escape them if not found refactor: unify the token expansion logic, move it to JS instead of relying on a postcss plugin

--- a/website/pages/docs/theming/usage.mdx
+++ b/website/pages/docs/theming/usage.mdx
@@ -26,39 +26,70 @@ const App = () => (
 
 ## Composite values
 
-Some CSS properties like `border`, `box-shadow` allow you to specify multiple properties in its value. Panda allows you to reference tokens in these composite values by using the `token()` function.
+Some CSS properties like `border`, `box-shadow` allow you to specify multiple properties in its value. Panda allows you to reference tokens in these composite values by using either the `token()` string function (similar to the JS equivalent) or the token reference syntax `{path.to.token}` (similar to the semantic tokens equivalent).
 
-```js
-import { css } from '../styled-system/css'
+The `token()` function is useful when you need to provide a fallback value. The token reference syntax is useful when you don't need a fallback value or prefer using a more concise syntax.
 
-const className = css({ border: '1px solid token(colors.red.400)' })
-```
+<Tabs items={['token', 'reference syntax']}>
+  <Tab>
+    ```js
+    import { css } from '../styled-system/css'
 
-You can also provide a fallback value.
+    const className = css({ border: '1px solid token(colors.red.400)' })
+    ```
 
-```js
-import { css } from '../styled-system/css'
+    You can also provide a fallback value.
 
-const className = css({ border: '1px solid token(colors.red.400, red)' })
-```
+    ```js
+    import { css } from '../styled-system/css'
+
+    const className = css({ border: '1px solid token(colors.red.400, red)' })
+    ```
+
+  </Tab>
+  <Tab>
+   ```js
+    import { css } from '../styled-system/css'
+
+    const className = css({ border: '1px solid {colors.red.400}' })
+    ```
+  </Tab>
+</Tabs>
+
 
 You can also use it in media queries or any other CSS at-rule.
 
-```js
-import { css } from '../styled-system/css'
+<Tabs items={['token', 'reference syntax']}>
+  <Tab>
+    ```js
+    import { css } from '../styled-system/css'
 
-const className = css({
-  '@media screen and (min-width: token(sizes.4xl))': {
-    color: 'green.400'
-  }
-})
-```
+    const className = css({
+      '@media screen and (min-width: token(sizes.4xl))': {
+        color: 'green.400'
+      }
+    })
+    ```
+
+  </Tab>
+  <Tab>
+    ```js
+    import { css } from '../styled-system/css'
+
+    const className = css({
+      '@media screen and (min-width: {sizes.4xl})': {
+        color: 'green.400'
+      }
+    })
+    ```
+  </Tab>
+</Tabs>
 
 ## Vanilla JS
 
 Use the generated `token` function to query design tokens in your project. This is useful if you need direct access to your design tokens in the `style` attribute or when using CSS-in-JS libraries like `styled-components` or `@emotion/styled`
 
-> This approach is useful for incrementally adopting Panda in existing projects.
+> This approach is useful for incrementally adopting Panda in existing projects or [dynamic styling](/docs/guides/dynamic-styling#using-token)
 
 ### Style Attribute
 
