docs: extend keyword + reference the minimal setup

--- a/website/pages/docs/customization/conditions.mdx
+++ b/website/pages/docs/customization/conditions.mdx
@@ -109,3 +109,7 @@ Then you can run the following command to update the conditions JS code:
     ```
   </Tab>
 </Tabs>
+
+## Minimal setup
+
+If you want to use Panda with the bare minimum, without any of the defaults, you can read more about it [here](/docs/guide/minimal-setup)
