--- a/website/pages/docs/customization/theme.mdx
+++ b/website/pages/docs/customization/theme.mdx
@@ -196,3 +196,7 @@ export default defineConfig({
 Panda ships with the following keyframes by default:
 
 <TokenDocs type="keyframes" />
+
+## Minimal setup
+
+If you want to use Panda with the bare minimum, without any of the defaults, you can read more about it [here](/docs/guide/minimal-setup)
