--- a/website/pages/docs/customization/utilities.mdx
+++ b/website/pages/docs/customization/utilities.mdx
@@ -168,3 +168,7 @@ export default defineConfig({
   }
 })
 ```
+
+## Minimal setup
+
+If you want to use Panda with the bare minimum, without any of the defaults, you can read more about it [here](/docs/guide/minimal-setup)
