--- a/website/pages/docs/customization/patterns.mdx
+++ b/website/pages/docs/customization/patterns.mdx
@@ -145,3 +145,7 @@ Then you can run the following command to update the pattern JS code:
     ```
   </Tab>
 </Tabs>
+
+## Minimal setup
+
+If you want to use Panda with the bare minimum, without any of the defaults, you can read more about it [here](/docs/guide/minimal-setup)
