docs: update patterns

--- a/website/pages/docs/concepts/patterns.mdx
+++ b/website/pages/docs/concepts/patterns.mdx
@@ -10,6 +10,10 @@ predefined patterns like stack, hstack, vstack, wrap, etc. These patterns can be
 
 > Think of patterns as a set of predefined styles to reduce repetition and improve readability. You can override the properties as needed, just like in the `css` function.
 
+## Creating Patterns
+
+To learn how to create patterns, check out the [customization](/docs/customization/patterns) section.
+
 ## Predefined Patterns
 
 ### Box
