docs: config.dependencies

--- a/website/pages/docs/installation/storybook.mdx
+++ b/website/pages/docs/installation/storybook.mdx
@@ -248,6 +248,8 @@ export const Default: Story = {
 
 ### Troubleshooting
 
+#### `Cannot find module '@pandacss/dev/postcss'`
+
 If you are having issues with the PostCSS plugin similar to `Cannot find module '@pandacss/dev/postcss'`,
 update the PostCSS config as follows:
 
@@ -255,3 +257,17 @@ update the PostCSS config as follows:
 module.exports = {
   plugins: [require('@pandacss/dev/postcss')],
 }
+```
+
+#### HMR not triggered
+
+If you are having issues with HMR not being triggered after a `panda.config.ts` change (or one of its [dependencies](/docs/references/config#dependencies)), you can manually specify the files that should trigger a rebuild by adding the following to your `panda.config.ts`:
+
+```js filename="panda.config.ts"
+import { defineConfig } from "@pandacss/dev"
+
+export default defineConfig({
+  // ...
+  dependencies: ['path/to/files/**.ts'],
+})
+```
