--- a/website/pages/docs/concepts/patterns.mdx
+++ b/website/pages/docs/concepts/patterns.mdx
@@ -733,6 +733,71 @@ export function Page() {
   </Tab>
 </Tabs>
 
+### cq (Container Query)
+
+To make it easier to use container queries, we've added a new `cq` pattern to `@pandacss/preset-base`. It is used to apply styles based on the width of the container.
+
+The `cq` function accepts the following properties:
+
+- `name`: The name of the container query, Maps to the [`containerName` CSS property](https://developer.mozilla.org/en-US/docs/Web/CSS/container-name).
+- `type`: The type of the container query. Maps to the [`containerType` CSS property](https://developer.mozilla.org/en-US/docs/Web/CSS/container-type). Defaults to `inline-size`.
+
+```ts
+import { cq } from 'styled-system/patterns'
+
+function Demo() {
+  return (
+    <nav className={cq()}>
+      <div
+        className={css({
+          fontSize: { base: 'lg', '@/sm': 'md' },
+        })}
+      />
+    </nav>
+  )
+}
+```
+
+You can also named container queries:
+
+```tsx
+// 1 - Define container conditions
+
+export default defineConfig({
+  // ...
+  theme: {
+    containerNames: ['sidebar', 'content'],
+    containerSizes: {
+      xs: '40em',
+      sm: '60em',
+      md: '80em',
+    },
+  },
+})
+```
+
+```tsx
+// 2 - Automatically generate container query pattern
+
+import { cq } from 'styled-system/patterns'
+
+function Demo() {
+  return (
+    <nav className={cq({ name: 'sidebar' })}>
+      <div
+        className={css({
+          // When the sidebar container reaches the `sm` size
+          // change font size to `md`
+          fontSize: { base: 'lg', '@sidebar/sm': 'md' },
+        })}
+      />
+    </nav>
+  )
+}
+```
+
+Read more about container queries [here](/docs/utilities/layout#container-query).
+
 ## Usage with JSX
 
 To use the pattern in JSX, you need to set the `jsxFramework` property in the config. When this is set, Panda will emit
