docs: cq in conditional styles

--- a/website/pages/docs/concepts/patterns.mdx
+++ b/website/pages/docs/concepts/patterns.mdx
@@ -796,7 +796,7 @@ function Demo() {
 }
 ```
 
-Read more about container queries [here](/docs/utilities/layout#container-query).
+Read more about container queries [here](/docs/concepts/conditional-styles#container-queries).
 
 ## Usage with JSX
 
