docs: patterns jsx tracking

--- a/website/pages/docs/customization/patterns.mdx
+++ b/website/pages/docs/customization/patterns.mdx
@@ -120,6 +120,7 @@ export default defineConfig({
         properties: {
           // only allow row and column
           direction: { type: "enum", value: ["row", "column"] },
+          jsx: ['Flex', 'CustomFlex'] // 👈 match the `CustomFlex` component to this pattern
         },
       },
     },
