--- a/website/pages/docs/concepts/patterns.mdx
+++ b/website/pages/docs/concepts/patterns.mdx
@@ -822,3 +822,32 @@ function App() {
   )
 }
 ```
+
+### Advanced JSX Tracking
+
+We recommend that you use the pattern functions in most cases, in design systems there might be a need to compose existing components to create new components.
+
+To track the usage of the patterns in these cases, you'll need to add the `jsx` hint for the pattern config
+
+```js {12} filename="button.pattern.ts"
+import { definePattern } from '@pandacss/dev'
+
+const scrollable = definePattern({
+  // ...
+  // Add the jsx hint to track the usage of the pattern in JSX, you can also use a regex to match multiple components
+  jsx: ['Scrollable', 'PageScrollable']
+})
+```
+
+Then you can create a new component that uses the `PageScrollable` component and Panda will track the usage of the `scrollable` pattern as well.
+
+```tsx
+const PageScrollable = (props: ButtonProps) => {
+  const { children, size } = props
+  return (
+    <Scrollable {...props} size={size}>
+      {children}
+    </Scrollable>
+  )
+}
+```
