--- a/website/pages/docs/concepts/style-props.mdx
+++ b/website/pages/docs/concepts/style-props.mdx
@@ -103,7 +103,9 @@ const Button = ({ children }) => (
 
 ### Property Renaming
 
-<Callout type="warning">Due to the static nature of Panda, you can't rename properties at runtime.</Callout>
+<Callout type="warning">
+  Due to the static nature of Panda, you can't rename properties at runtime.
+</Callout>
 
 ```tsx filename="App.tsx"
 import { Circle, CircleProps } from '../styled-system/jsx'
@@ -134,20 +136,22 @@ const App = () => {
 
 The same principles apply to all style props, recipe variants, and pattern props.
 
-<Callout type="info">If you still need to rename properties at runtime, you can use `config.staticCss` as an escape-hatch to pre-generate the CSS anyway for the properties you need.</Callout>
+<Callout type="info">
+  If you still need to rename properties at runtime, you can use
+  `config.staticCss` as an escape-hatch to pre-generate the CSS anyway for the
+  properties you need.
+</Callout>
 
 ### Recipe
 
 You can use recipe variants as JSX props to quickly change the styles of your components, as long as [you're tracking those components in your recipe config](/docs/concepts/recipes#advanced-jsx-tracking).
 
-```jsx
+```tsx
 import { styled } from '../styled-system/jsx'
 import { button, type ButtonVariantProps } from '../styled-system/recipes'
 
 const Button = (props: ButtonVariantProps) => (
-  <button className={button(props)}>
-    Button
-  </button>
+  <button className={button(props)}>Button</button>
 )
 
 const App = () => <Button variant="secondary">Button</Button>
@@ -195,11 +199,15 @@ const Button = styled('button', {
         bg: 'gray.500',
         color: 'white'
       }
-    },
+    }
   }
 })
 
-const App = () => <Button variant="secondary" mt="10px">Button</Button>
+const App = () => (
+  <Button variant="secondary" mt="10px">
+    Button
+  </Button>
+)
 ```
 
 ### Factory Options
@@ -224,13 +232,17 @@ import { button } from '../styled-system/recipes'
 
 const Button = styled('button', button, { dataAttr: true })
 
-const App = () => <Button variant="secondary" mt="10px">Button</Button>
-// Will render something like <button data-recipe="button" class="btn btn--variant_purple mt_10px">Button</button>
+const App = () => (
+  <Button variant="secondary">
+    Button
+  </Button>
+)
+// => <button data-recipe="button" class="btn btn--variant_purple">Button</button>
 ```
 
 #### `defaultProps`
 
-allows you to skip writing wrapper components just to set a few props. It also allows you to locall  override the default variants or base styles of a recipe.
+allows you to skip writing wrapper components just to set a few props. It also allows you to locall override the default variants or base styles of a recipe.
 
 ```jsx
 import { styled } from '../styled-system/jsx'
@@ -244,30 +256,35 @@ const Button = styled('button', button, {
 })
 
 const App = () => <Button>Button</Button>
-// Will render something like <button class="btn btn--variant_secondary px_10px">Button</button>
+// => <button class="btn btn--variant_secondary px_10px">Button</button>
 ```
-
 
 #### `shouldForwardProp`
 
-allows you to customize which props are forwarded to the underlying element. By default, all props except recipe variants and style props are forwarded.
+Used to customize which props are forwarded to the underlying element. By default, all props except recipe variants and style props are forwarded.
 
-For example you could use it to integrate with [Framer Motion](https://www.framer.com/motion/).
+For example, you could use it to integrate with [Framer Motion](https://www.framer.com/motion/).
 
 ```jsx
 import { styled } from '../styled-system/jsx'
 import { button } from '../styled-system/recipes'
 import { motion, isValidMotionProp } from 'framer-motion'
 
-const StyledMotion = styled(motion.div, {}, {
-  shouldForwardProp: (prop, variantKeys) =>
-      isValidMotionProp(prop) || (!variantKeys.includes(prop) && !isCssProperty(prop)),
-})
+const StyledMotion = styled(
+  motion.div,
+  {},
+  {
+    shouldForwardProp: (prop, variantKeys) =>
+      isValidMotionProp(prop) ||
+      (!variantKeys.includes(prop) && !isCssProperty(prop))
+  }
+)
 ```
 
 ### Reducing the allowed style props
 
 You can reduce the allowed JSX properties on the factory using [`config.jsxStyleProps`](/docs/references/config#jsxstyleprops):
+
 - When set to 'all', all style props are allowed.
 - When set to 'minimal', only the `css` prop is allowed.
 - When set to 'none', no style props are allowed and therefore the `jsxFactory` will not be usable as a component:
@@ -275,7 +292,6 @@ You can reduce the allowed JSX properties on the factory using [`config.jsxStyle
   - but the recipe usage is still valid `styled("div", { base: { color: "red.300" }, variants: { ...} })`
 
 > Removing style props (from `all` to either `minimal` or `none`) will reduce the size of the generated code due to not having to check which props are style props at runtime.
-
 
 ## JSX Patterns
 
@@ -298,28 +314,30 @@ const App = () => (
 
 ## Making your own styled components
 
-You can use the `styled` function to create your own styled components, using the `splitCssProps` function to split the style props from the rest of the props.
+To make a custom JSX component that accepts style props, Use the `splitCssProps` function to split style props from other component props.
 
-```jsx
+> For this to work correctly, set the `jsxFramework` to the framework you're using in your panda config.
+
+```tsx
 import { splitCssProps, styled } from '../styled-system/jsx'
 import type { HTMLStyledProps } from '../styled-system/types'
 
-function SomeComponent({ children, ...props }: HTMLStyledProps<'div'>) {
+export function Component(props: HTMLStyledProps<'div'>) {
   const [cssProps, restProps] = splitCssProps(props)
-  return (
-    <styled.div {...restProps} className={css({ display: 'flex', height: '20', width: '20' }, cssProps)}>
-      {children}
-    </styled.div>
+  const { css: cssProp, ...styleProps } = cssProps
+
+  const className = css(
+    { display: 'flex', height: '20', width: '20' },
+    styleProps,
+    cssProp
   )
+
+  return <div {...restProps} className={className} />
 }
 
 // Usage
 function App() {
-  return (
-    <SplitComponent w="2">
-      Click me
-    </SplitComponent>
-  )
+  return <Component w="2">Click me</Component>
 }
 ```
 
@@ -333,11 +351,11 @@ You can use these types to get type safety in your components.
 
 Use the `JsxStyleProps` to get the types of the style object that is compatible with JSX elements.
 
-```jsx {2}
+```tsx
 import { styled } from '../styled-system/jsx'
 import type { JsxStyleProps } from '../styled-system/types'
 
-type ButtonProps = {
+interface ButtonProps {
   color?: JsxStyleProps['color']
 }
 
@@ -350,7 +368,7 @@ const Button = (props: ButtonProps) => {
 
 Use the `HTMLStyledProps` type to get the types of an element in addition to the style props.
 
-```jsx {2}
+```tsx {2}
 import { styled } from '../styled-system/jsx'
 import type { HTMLStyledProps } from '../styled-system/jsx'
 
@@ -374,12 +392,12 @@ const Button = styled('button', {
   variants: {
     state: {
       error: { color: 'red' },
-      success: { color: 'green' },
-    },
-  },
-});
+      success: { color: 'green' }
+    }
+  }
+})
 
-type ButtonVariantProps = StyledVariantProps<typeof Button>;
+type ButtonVariantProps = StyledVariantProps<typeof Button>
 //   ^ { state?: 'error' | 'success' | undefined }
 ```
 
@@ -387,7 +405,7 @@ type ButtonVariantProps = StyledVariantProps<typeof Button>;
 
 Every pattern provided by Panda has a corresponding type that you can use to get type safety in your components.
 
-```jsx {2}
+```tsx {2}
 import { Stack } from '../styled-system/jsx'
 import type { StackProps } from '../styled-system/jsx'
 ```
