docs: add notice for customizing the panda css setup

--- a/website/pages/docs/installation/nextjs.mdx
+++ b/website/pages/docs/installation/nextjs.mdx
@@ -301,6 +301,12 @@ If you don't have Next.js app installed, you can follow the [Create a Next.js ap
 
   Open [http://localhost:3000](http://localhost:3000) with your browser to see the result.
 
+  ### Customize your Panda CSS setup (optional)
+
+  It's worth noting that you have the flexibility to customize your setup by opting out of specific features and concepts in Panda CSS. 
+  This allows you to create a more tailored configuration according to your preferences. 
+  For step-by-step instructions on creating a minimal setup, please refer to this [guide](/docs/guides/minimal-setup).
+
   </Steps>
 </RouteSwitch>
 
