--- a/website/pages/docs/installation/preact.mdx
+++ b/website/pages/docs/installation/preact.mdx
@@ -129,6 +129,12 @@ const Home = () => {
 export default Home;
 ```
 
+### Customize your Panda CSS setup (optional)
+
+It's worth noting that you have the flexibility to customize your setup by opting out of specific features and concepts in Panda CSS. 
+This allows you to create a more tailored configuration according to your preferences. 
+For step-by-step instructions on creating a minimal setup, please refer to this [guide](/docs/guides/minimal-setup).
+
 </Steps>
 
 ## Troubleshooting
