--- a/website/pages/docs/installation/svelte.mdx
+++ b/website/pages/docs/installation/svelte.mdx
@@ -277,6 +277,13 @@ Here is the snippet of code that you can use in your `src/routes/+page.svelte` f
 	Hello 🐼!
 </div>
 ```
+
+### Customize your Panda CSS setup (optional)
+
+It's worth noting that you have the flexibility to customize your setup by opting out of specific features and concepts in Panda CSS. 
+This allows you to create a more tailored configuration according to your preferences. 
+For step-by-step instructions on creating a minimal setup, please refer to this [guide](/docs/guides/minimal-setup).
+
 </Steps>
 
 ## Troubleshooting
