--- a/website/pages/docs/installation/vue.mdx
+++ b/website/pages/docs/installation/vue.mdx
@@ -207,4 +207,10 @@ import { css } from "../styled-system/css";
 </template>
 ```
 
+### Customize your Panda CSS setup (optional)
+
+It's worth noting that you have the flexibility to customize your setup by opting out of specific features and concepts in Panda CSS. 
+This allows you to create a more tailored configuration according to your preferences. 
+For step-by-step instructions on creating a minimal setup, please refer to this [guide](/docs/guides/minimal-setup).
+
 </Steps>
