--- a/website/pages/docs/overview/getting-started.mdx
+++ b/website/pages/docs/overview/getting-started.mdx
@@ -32,6 +32,10 @@ Start using Panda CSS in your JavaScript framework using our framework-specific 
 
 Get familiar with the core features and concepts in Panda.
 
+> All of the features and concepts listed below are readily available with Panda CSS. <br/>
+> However, it's important to note that you have the option to opt-out of each of them to tailor your setup according to your preferences. 
+> For example, you can create a minimal setup following this [guide](/docs/guides/minimal-setup).
+
 <Cards>
   <Card
     arrow
