docs(nuxt): add app.vue as default file for config

--- a/website/pages/docs/installation/nuxt.mdx
+++ b/website/pages/docs/installation/nuxt.mdx
@@ -124,7 +124,7 @@ export default defineConfig({
  preflight: true,
 
  // Where to look for your css declarations
- include: ["./components/**/*.{js,jsx,ts,tsx,vue}", "./pages/**/*.{js,jsx,ts,tsx,vue}"],
+ include: ["./app.vue", "./components/**/*.{js,jsx,ts,tsx,vue}", "./pages/**/*.{js,jsx,ts,tsx,vue}"],
 
  // Files to exclude
  exclude: [],
