Docs: Installation: Update SvelteKit vitePreprocess import path

--- a/website/pages/docs/installation/svelte.mdx
+++ b/website/pages/docs/installation/svelte.mdx
@@ -169,8 +169,7 @@ To configure Svelte preprocess to use PostCSS and add Panda alias update the `sv
 
 ```js {3,11-13,21-23} filename="svelte.config.js"
 import adapter from '@sveltejs/adapter-auto';
-import { vitePreprocess } from '@sveltejs/kit/vite';
-
+import { vitePreprocess } from '@sveltejs/vite-plugin-svelte';
 /** @type {import('@sveltejs/kit').Config} */
 const config = {
 	// Consult https://kit.svelte.dev/docs/integrations#preprocessors
@@ -285,8 +284,7 @@ If you're not getting import autocomplete in your IDE, you may need to include t
 
 ```js filename="svelte.config.js"
 import adapter from '@sveltejs/adapter-auto';
-import { vitePreprocess } from '@sveltejs/kit/vite';
-
+import { vitePreprocess } from '@sveltejs/vite-plugin-svelte';
 /** @type {import('@sveltejs/kit').Config} */
 const config = {
   // ...
